--- a/semantic_map/package.xml
+++ b/semantic_map/package.xml
@@ -50,6 +50,7 @@
   <build_depend>ros-hydro-qt-build</build_depend>
   <build_depend>ros-hydro-qt-ros</build_depend>
   <build_depend>ros_datacentre_cpp_client</build_depend>
+  <build_depend>image_geometry</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
