--- a/MetaroomXMLParser/package.xml
+++ b/MetaroomXMLParser/package.xml
@@ -43,10 +43,12 @@
   <build_depend>rospy</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>libqt4-dev</build_depend>
+  <build_depend>image_geometry</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>libqt4-dev</run_depend>
+  <run_depend>image_geometry</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
