--- a/quasimodo/quasimodo_retrieval/CMakeLists.txt
+++ b/quasimodo/quasimodo_retrieval/CMakeLists.txt
@@ -177,6 +177,7 @@ add_executable(quasimodo_visualization_server src/quasimodo_visualization_server
 add_executable(quasimodo_visualize_model src/quasimodo_visualize_model.cpp)
 add_executable(quasimodo_visualize_retrieval_cloud src/quasimodo_visualize_retrieval_cloud.cpp)
 add_executable(quasimodo_retrieval_node src/quasimodo_retrieval_node.cpp)
+add_executable(quasimodo_filtering_node src/quasimodo_filtering_node.cpp)
 add_executable(quasimodo_retrieve_observation src/quasimodo_retrieve_observation.cpp)
 add_executable(quasimodo_logging_server src/quasimodo_logging_server.cpp)
 
@@ -257,6 +258,15 @@ target_link_libraries(quasimodo_retrieval_node
   ${catkin_LIBRARIES}
 )
 
+target_link_libraries(quasimodo_filtering_node
+#  ${retrieval_libraries}
+#  ${benchmark_libraries}
+  ${OpenCV_LIBS}
+  ${QT_QTMAIN_LIBRARY} ${QT_LIBRARIES}
+  ${PCL_LIBRARIES}
+  ${catkin_LIBRARIES}
+)
+
 target_link_libraries(quasimodo_retrieve_observation
 #  ${retrieval_libraries}
 #  ${benchmark_libraries}
@@ -288,7 +298,7 @@ install(
 )
 
 # Mark executables and/or libraries for installation
-install(TARGETS quasimodo_retrieval_server quasimodo_retrieval_publisher quasimodo_visualization_server
+install(TARGETS quasimodo_retrieval_server quasimodo_retrieval_publisher quasimodo_visualization_server quasimodo_filtering_node
                 quasimodo_visualize_model quasimodo_visualize_retrieval_cloud quasimodo_retrieval_node quasimodo_retrieve_observation quasimodo_logging_server
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
