--- a/quasimodo/quasimodo_brain/package.xml
+++ b/quasimodo/quasimodo_brain/package.xml
@@ -42,6 +42,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>quasimodo_msgs</build_depend>
   <build_depend>quasimodo_models</build_depend>
+  <build_depend>quasimodo_conversions</build_depend>
   <build_depend>metaroom_xml_parser</build_depend>
   <build_depend>soma_manager</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
@@ -68,6 +69,7 @@
   <run_depend>semantic_map_msgs</run_depend>
   <run_depend>quasimodo_models</run_depend>
   <run_depend>quasimodo_msgs</run_depend>
+  <run_depend>quasimodo_conversions</run_depend>
   <run_depend>metaroom_xml_parser</run_depend>
   <run_depend>libpcl-all</run_depend>
   <run_depend>libopencv-dev</run_depend>
