--- a/quasimodo/quasimodo_object_search/package.xml
+++ b/quasimodo/quasimodo_object_search/package.xml
@@ -42,8 +42,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>quasimodo_msgs</build_depend>
   <build_depend>mongodb_store</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <run_depend>quasimodo_msgs</run_depend>
   <run_depend>mongodb_store</run_depend>
+  <run_depend>cv_bridge</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
